# dwl

./: .gitignore  README.md
docs/design/: data_model.md  mockup.html
docs/dev/: IAM-API-CreateAccounts.md  IAM-API-CreateRights.md
docs/features/: IAM-API-DeleteRights.md  IAM-API-ReadRights.md
docs/user/: changelog.md  overall.md
iam/: Cargo.toml
iam/migrations/2022-09-30-170207_create_accounts/: up.sql
iam/src/: backup  main.rs  models.rs  schema.rs
src/backend/services/iam/: app.py  groups_routers.py  requirements.txt  rights_routers.py  users_routers.py
src/frontend/app/: package-lock.json
src/frontend/app/.svelte-kit/: ambient.d.ts
src/frontend/app/src/: app.html
src/frontend/app/src/routes/: +page.svelte
