[package]
name = "iam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["redis-actor-session"] }
env_logger = "0.9"
log = "0.4"
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
# uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }